# windows_opengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/: CMakeLists.txt  application.cpp  application.h
application/camera/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  game_camera_controller.cpp  game_camera_controller.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  track_ball_controller.cpp  track_ball_controller.h
assets/shaders/: depth.frag  depth.vert  fragment.glsl  phong.frag  phong_example1.frag  phong_point_light.frag  vertex.glsl  white.frag  white.vert
example/: example1.cpp
glframework/: CMakeLists.txt  core.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_uniformer.cpp  shader_uniformer.h  texture.cpp  texture.h
glframework/interface/: render_able.cpp  render_able.h  shader_uniformer.cpp  shader_uniformer.h
glframework/light/: ambient_light.cpp  ambient_light.h  directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
glframework/material/: depth_material.cpp  depth_material.h  light_material.cpp  light_material.h  material.cpp  material.h  phong_material.cpp  phong_material.h  white_material.cpp  white_material.h
glframework/object/: group.cpp  group.h  mesh.cpp  mesh.h  object.cpp  object.h  scene.cpp  scene.h
glframework/renderer/: renderer.cpp  renderer.h
glframework/tools/: tools.cpp  tools.h
imgui/: CMakeLists.txt
utils/: assimp_loader.cpp  assimp_loader.h  auto_id.h
wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
